target_sources(Core PUBLIC
    Properties.hpp
    Resources.hpp
)

add_subdirectory(AI)
add_subdirectory(Battles)
add_subdirectory(Cameras)
add_subdirectory(Components)
add_subdirectory(Debug)
add_subdirectory(Files)
add_subdirectory(Input)
add_subdirectory(Items)
add_subdirectory(Maps)
add_subdirectory(Peoplemon)
add_subdirectory(Player)
add_subdirectory(Scripts)
add_subdirectory(Systems)
