target_sources(Core PUBLIC
    AI.hpp
    Clock.hpp
    Controllable.hpp
    Entity.hpp
    Flight.hpp
    HUD.hpp
    Interaction.hpp
    Movement.hpp
    Player.hpp
    Position.hpp
    Render.hpp
    Scripts.hpp
    Systems.hpp
    Trainers.hpp
    WildPeoplemon.hpp
    World.hpp
)

add_subdirectory(HUD)
