target_sources(Core PRIVATE
    AI.cpp
    Clock.cpp
    Controllable.cpp
    Entity.cpp
    Flight.cpp
    HUD.cpp
    Interaction.cpp
    Movement.cpp
    Player.cpp
    Position.cpp
    Render.cpp
    Scripts.cpp
    Systems.cpp
    Trainers.cpp
    WildPeoplemon.cpp
    World.cpp
)

add_subdirectory(HUD)
