target_sources(PeoplemonEditor PRIVATE
    AnimationWindow.cpp
    BehaviorEditor.cpp
    CatchRegionWindow.cpp
    CharacterSpawnWindow.cpp
    ConversationNode.cpp
    ConversationTree.cpp
    ConversationWindow.cpp
    EditMap.cpp
    EventEditor.cpp
    HighlightRadioButton.cpp
    ItemSelector.cpp
    OwnedPeoplemonWindow.cpp
    PeoplemonSelector.cpp
    MapActions.hpp
    MapActions.cpp
    MoveSelector.cpp
    NewMapDialog.cpp
    NPCEditorWindow.cpp
    ScriptSelector.cpp
    StatBox.cpp
    TrainerEditorWindow.cpp
)

add_subdirectory(Helpers)
